# mailer

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/: mailer.py
